# WNF-Hijack

./: CMakeLists.txt  README.md  build.bat  build.py  build.sh
.github/workflows/: c-cpp.yml
docs/: 01-architecture.md  02-wnf-internals.md  03-thread-pool-hijacking.md  04-alpc-abuse.md
include/undoc/: ntwrapper.h  wnf_structs.h
src/: main.cpp  sa.cpp  sa.h
src/core/: alpc_client.cpp  alpc_client.h  tp_hijacker.cpp  tp_hijacker.h  wnf_client.cpp  wnf_client.h
src/utils/: memory.cpp  memory.h  process.cpp  process.h
tests/: test_wnf.cpp
tools/: find_tp_offsets.py  re_wnf.ps1
